<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:contentDescription="@string/user_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/sample_username"
            android:textColor="#414040"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/html_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_html_url"
            android:textColor="#8f8d8d"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>